[package]
name = "slack-sotw"
version = "0.0.1"
authors = ["scav <dagherad@gmail.com>"]
edition = "2018"

[dependencies]
# API
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.115"
serde_json = "1.0.57"
reqwest = { version = "0.10.7", features = ["json"] }

# Database
r2d2 = "0.8"
diesel = { version = "^1.4.4", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }

# Plumbing
log = "0.4.0"
env_logger = "0.7.1"
dotenv = "0.15.0"