[package]
name = "slack-sotw"
version = "0.0.1"
authors = ["scav <dagherad@gmail.com>"]
edition = "2018"

[dependencies]
# API
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-http = "2.0.0"
actix-service = "1.0.6"
serde = "1.0.115"
serde_json = "1.0.57"
serde_urlencoded = "0.6.1"
reqwest = { version = "0.10.7", features = ["json"] }
futures = "0.3.5"

# Validation
ring = "0.16.15"
hex = "0.4.2"

# Database
r2d2 = "0.8"
diesel = { version = "^1.4.6", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }

# Plumbing
log = "0.4.11"
env_logger = "0.7.1"
dotenv = "0.15.0"